--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --color-dark-blue: #00103b;
+  --color-blue: #081f5c;
+  --color-light-blue: #81eef3;
+  
+
+}
